fix: fix cell style on mobile

--- a/webapp/app/containers/Widget/components/Chart/Chart.less
+++ b/webapp/app/containers/Widget/components/Chart/Chart.less
@@ -138,11 +138,10 @@
     height: 100%;
     padding: 10px 8px;
     display: flex;
+    flex-direction: column;
 
     .valCell {
       flex: 1;
-      display: flex;
-      // align-items: center;
     }
     .cdtCell {
       padding: 4px 0;
